@@ -1,3 +1,10 @@
+2002-12-15  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	Fixes #101084
+
+	* providers/sybase/gda-sybase-provider.c (gda_sybase_execute_cmd):
+	don't mark function names for translation.
+
 2002-12-13  Vivien Malerba <malerba@gnome-db.org>
 	* libgda/gda-value.c: corrected a localization bug in the gda_value_to_xml () function.
 	* providers/postgres/gda-postgres-provider.c: started to implement the
